[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/hud/player_menu/skills/stats/Stat.gd" type="Script" id=1]
[ext_resource path="res://scenes/hud/player_menu/skills/stats/images/numstat.png" type="Texture" id=2]
[ext_resource path="res://fonts/retro_gaming/RetroGaming.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/hud/player_menu/skills/stats/stats_images/img-stat.png" type="Texture" id=4]
[ext_resource path="res://scenes/hud/player_menu/skills/stats/images/addStat-normal.png" type="Texture" id=5]
[ext_resource path="res://scenes/hud/player_menu/skills/stats/images/addStat-pressed.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 3 )

[node name="Stat" type="HBoxContainer"]
margin_right = 150.0
margin_bottom = 31.0
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="PointsBackground" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )

[node name="Points" type="Label" parent="PointsBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
text = "99"
align = 1
valign = 1

[node name="StatImg" type="TextureRect" parent="."]
margin_left = 32.0
margin_right = 128.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="AddPoint" type="TextureButton" parent="."]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 32.0
disabled = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
